se agrego una nueva serie y su categoria con un nuevo h3

--- a/index.html
+++ b/index.html
@@ -32,5 +32,10 @@
     <img src="https://th.bing.com/th?id=OSK.df029872a8ccf0512e8126c2c196d836&w=95&h=95&c=12&rs=2&o=6&pid=SANGAM">
     <p>jonathan banks- mike ehrmantraut</p>
 
+    <h2>Juego de tronos</h2>
+    <h3>categoria: belica-drama-accion</h3>
+    
+
+
 </body>
 </html
