se agrego la descripcion de la nueva  serie agregada

--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
 
     <h2>Juego de tronos</h2>
     <h3>categoria: belica-drama-accion</h3>
-    
+    <p>Juego de Tronos" es una serie de televisión épica basada en los libros de George R.R. Martin,
+        que narra las luchas políticas y guerras entre familias poderosas por el control de los 
+        Siete Reinos de Westeros, todo mientras se desarrollan elementos fantásticos como dragones 
+        y caminantes blancos.
+    </p>
 
 
 </body>
