--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@
         Siete Reinos de Westeros, todo mientras se desarrollan elementos fantásticos como dragones 
         y caminantes blancos.
     </p>
+    <h3>actores principales</h3>
+    <img src="https://th.bing.com/th?id=OSK.6cbcadefa8bb72e356d0c2b7cf0a9c40&w=95&h=95&c=12&rs=2&o=6&pid=SANGAM" alt="">
+    <p>emilia clarke- daenerys targaryen</p>
 
-
+    <img src="https://th.bing.com/th?id=OSK.f1c3e0bb956433842e25eff16ea34b46&w=95&h=95&c=12&rs=2&o=6&pid=SANGAM"
+    >
+    <p>peter dinklage- tyrion lannister</p>
+    
 </body>
 </html
