se agregaron los ultimos actores principales de la serie con img

--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
     <img src="https://th.bing.com/th?id=OSK.f1c3e0bb956433842e25eff16ea34b46&w=95&h=95&c=12&rs=2&o=6&pid=SANGAM"
     >
     <p>peter dinklage- tyrion lannister</p>
-    
+
+    <img src="https://th.bing.com/th?id=OSK.30790a08eb44e936dd587ba9ca12faf9&w=95&h=95&c=12&rs=2&o=6&pid=SANGAM">
+    <p>Lena heday-carsei lannister</p>
+
+    <img src="https://th.bing.com/th?id=OSK.30790a08eb44e936dd587ba9ca12faf9&w=95&h=95&c=12&rs=2&o=6&pid=SANGAM"
+    >
+    <p>kit haringthon- jon snow</p>
+
+
 </body>
 </html
