se agrego la portada de la serie con img

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
         Siete Reinos de Westeros, todo mientras se desarrollan elementos fantásticos como dragones 
         y caminantes blancos.
     </p>
+    <img src="https://th.bing.com/th?id=OSK.ab3895256dfa815411c8e88da7338e7b&w=113&h=170&c=7&o=6&pid=SANGAM">
+    
     <h3>actores principales</h3>
     <img src="https://th.bing.com/th?id=OSK.6cbcadefa8bb72e356d0c2b7cf0a9c40&w=95&h=95&c=12&rs=2&o=6&pid=SANGAM" alt="">
     <p>emilia clarke- daenerys targaryen</p>
