se agrego una tercera serie con su descripcion, img y parrafos

--- a/index.html
+++ b/index.html
@@ -56,6 +56,17 @@
     >
     <p>kit haringthon- jon snow</p>
 
+    <h2>South park</h2>
+    <h3>categoria: humor-serie animada</h3>
+    <p>
+        "South Park" es una serie de animación para adultos conocida por su humor satírico y irreverente.
+        Creada por Trey Parker y Matt Stone, la serie sigue las travesías de cuatro niños,
+        Stan, Kyle, Cartman y Kenny, en el pequeño pueblo ficticio de South Park. 
+        Abordando temas controvertidos y actuales, la serie se caracteriza por su estilo de animación 
+        simple y su enfoque desenfadado para comentar sobre la sociedad, la política y la cultura popular.
+    </p>
+    <img src="https://th.bing.com/th?id=OSK.8369f4a8edc08bb30e178c9a5806c4c4&w=113&h=170&c=7&o=6&pid=SANGAM">
+    
 
 </body>
 </html
