se agrego la ultima seria con su portada img y distintos subtitulos

--- a/index.html
+++ b/index.html
@@ -75,5 +75,17 @@
     <p>stam</p>
     <img src="https://th.bing.com/th/id/OIP.7lO59Bx_eNuxTpB6pTKaMgHaKK?w=129&h=180&c=7&r=0&o=5&pid=1.7">
     <p>kenny</p>
+
+    <h2>kimetsu no yaiba</h2>
+    <h3>categoria: anime-shonen</h3>
+    <p>"Kimetsu no Yaiba" es un manga y anime japonés que sigue la historia de Tanjiro Kamado,
+        un joven cuya familia es asesinada por demonios, y su hermana Nezuko es transformada en 
+        uno de ellos. Determinado a vengar a su familia y encontrar una cura para Nezuko,
+        Tanjiro se une a los Cazadores de Demonios. La serie destaca por sus emocionantes escenas
+        de acción, personajes memorables y la búsqueda personal de Tanjiro en un mundo donde la
+        lucha entre humanos y demonios es intensa.
+    </p>
+    <img src="https://th.bing.com/th?q=Kimetsu+no+Yaiba+Pel%c3%adcula&w=138&h=138&c=7&o=5&pid=1.7&mkt=es-XL&cc=CO&setlang=es&adlt=strict"
+    >
     </body>
 </html
